added my header section

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-02</title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    
+    <!-- 1. Navbar section  -->  
+    <header class="header main-section">
+        <div class="logo"><img src="assets/logo.png" alt="">
+        </div>
+        <nav class="navber nav-items">
+            <li class="nav-item hidden "><a href="" class="text-color-1">Home</a></li>
+            <li class="nav-item hidden"><a href="" class="d1 color-02">Shop</a></li>
+            <li class="nav-item hidden"><a href class="d1 color-02">About us</a></li>
+            <p><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</p> 
+        </nav>
+    </header>
 </body>
 </html>
