--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
             <p><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</p> 
         </nav>
     </header>
+    <!-- 2. Banner section  -->   
+    <section class="hero-section">
+        <div class="hero-content">
+            <h1>ALWAYS <span class="color-01">FRESH FLOWERS</span></h1>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+        </div>
+        <div class="hero-image">
+            <img src="assets/hero-flower.png" alt="Fresh Flowers">
+        </div>
+    </section>
 </body>
 </html>
