--- a/index.html
+++ b/index.html
@@ -28,5 +28,62 @@
             <img src="assets/hero-flower.png" alt="Fresh Flowers">
         </div>
     </section>
+    <!-- 3. our plants section  -->
+    <section class="plants-section">
+        <div class="section-title">
+            <h2><span class="color-01">Our</span> Plants</h2>
+            <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </div>
+        <div class="plants-grid">
+            <div class="plant-card">
+                <img src="assets/sample-flower-image.png" alt="Lily Blossom">
+                <h3>Lily Blossom</h3>
+                <p>20 USD</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="plant-card">
+                <img src="assets/sample-flower-image.png" alt="Lily Blossom">
+                <h3>Lily Blossom</h3>
+                <p>20 USD</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="plant-card">
+                <img src="assets/sample-flower-image.png" alt="Lily Blossom">
+                <h3>Lily Blossom</h3>
+                <p>20 USD</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="plant-card">
+                <img src="assets/sample-flower-image.png" alt="Lily Blossom">
+                <h3>Lily Blossom</h3>
+                <p>20 USD</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="plant-card">
+                <img src="assets/sample-flower-image.png" alt="Lily Blossom">
+                <h3>Lily Blossom</h3>
+                <p>20 USD</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="plant-card">
+                <img src="assets/sample-flower-image.png" alt="Lily Blossom">
+                <h3>Lily Blossom</h3>
+                <p>20 USD</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="plant-card">
+                <img src="assets/sample-flower-image.png" alt="Lily Blossom">
+                <h3>Lily Blossom</h3>
+                <p>20 USD</p>
+                <button>Add to cart</button>
+            </div>
+            <div class="plant-card">
+                <img src="assets/sample-flower-image.png" alt="Lily Blossom">
+                <h3>Lily Blossom</h3>
+                <p>20 USD</p>
+                <button>Add to cart</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
