--- a/index.html
+++ b/index.html
@@ -85,5 +85,27 @@
             </div>
         </div>
     </section>
+    <!-- 4. Plants Lover Section  -->
+    <section>
+        <div class="plants-lover-section">
+            <div>
+               <img class="trusted-badge" src="assets/trusted-badge.png" alt="">
+            </div>
+            <div class="flower-plants-section">
+                <div>
+                <img src="assets/flower-store.png" alt="">
+                
+                </div>
+                <div class="plants">
+                    <h3>Flower & Plants <br> Lover</h3>
+                        <ul class="list-items">
+                            <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                            <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                            <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        </ul>
+                </div>
+            </div> 
+        </div>
+    </section>
 </body>
 </html>
