added join section

--- a/index.html
+++ b/index.html
@@ -138,5 +138,15 @@
         
     </div>
    </section>
+   <!-- 6. Join Section  -->
+    <section class="newsletter-section">
+        <div class="newsletter-content">
+            <h3>Join our colorful bunch</h3>
+            <div class="newsletter-form">
+                <input type="email" placeholder="Enter your email address">
+                <button>Subscribe</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
