--- a/index.html
+++ b/index.html
@@ -148,5 +148,40 @@
             </div>
         </div>
     </section>
+    <!-- 7. Footer Section  -->
+    <footer class="footer">
+        <div class="footer-grid">
+            <div class="footer-logo">
+                <img src="assets/logo.png" alt="Logo">
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Help Center</a></li>
+                </ul>
+            </div>
+        
+                <div class="social-links">
+                    <img src="assets/icon-linkedin.png" alt="linkedin">
+                    <img src="assets/icon-twitter.png
+                    " alt="twitter">
+                    <img src="assets/icon-facebook.png" alt="facebook">
+                    <img src="assets/icon-youtube.png" alt="youtube">
+                </div>
+        </div>
+    </footer>
 </body>
 </html>
